--- a/index.html
+++ b/index.html
@@ -72,11 +72,8 @@
             pointer-events: none;
         }
 
-        /* Header */
+        /* Header - Split Design with White Logo Section */
         header {
-            background: linear-gradient(135deg, #2196F3 0%, #1976D2 100%);
-            color: white;
-            padding: 1.5rem 0;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
             position: relative;
             overflow: hidden;
@@ -97,17 +94,27 @@
                 rgba(255, 255, 255, 0.05) 50px
             );
             pointer-events: none;
+            z-index: 1;
         }
 
         .header-content {
             max-width: 1200px;
             margin: 0 auto;
-            padding: 0 2rem;
             display: flex;
             justify-content: space-between;
-            align-items: center;
+            align-items: stretch;
             position: relative;
-            z-index: 1;
+            z-index: 2;
+        }
+
+        /* White Background for Logo Section */
+        .logo-section {
+            background: white;
+            padding: 1.5rem 2rem;
+            display: flex;
+            align-items: center;
+            min-width: 300px;
+            border-right: 1px solid rgba(33, 150, 243, 0.1);
         }
 
         .logo {
@@ -117,24 +124,23 @@
             font-size: 1.8rem;
             font-weight: bold;
             letter-spacing: 2px;
+            color: #2196F3;
         }
 
-        .logo-icon {
-            width: 50px;
-            height: 50px;
-            background: white;
-            border-radius: 8px;
+        /* Blue Background for Navigation */
+        .nav-section {
+            background: linear-gradient(135deg, #2196F3 0%, #1976D2 100%);
+            padding: 1.5rem 2rem;
             display: flex;
             align-items: center;
-            justify-content: center;
-            font-size: 1.5rem;
-            color: #2196F3;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+            flex: 1;
         }
+
 
         nav {
             display: flex;
             gap: 2rem;
+            margin-left: auto;
         }
 
         nav a {
@@ -158,6 +164,31 @@
 
         nav a:hover::after {
             width: 100%;
+        }
+
+        /* Responsive Header */
+        @media (max-width: 768px) {
+            .header-content {
+                flex-direction: column;
+            }
+
+            .logo-section {
+                width: 100%;
+                border-right: none;
+                border-bottom: 1px solid rgba(33, 150, 243, 0.1);
+                justify-content: center;
+            }
+
+            .nav-section {
+                width: 100%;
+                justify-content: center;
+            }
+
+            nav {
+                flex-wrap: wrap;
+                justify-content: center;
+                gap: 1rem;
+            }
         }
 
         /* Hero Section with Background Image */
@@ -753,15 +784,19 @@
     <!-- HEADER -->
     <header>
         <div class="header-content">
-            <div class="logo">
-                <img src="veritas-logo-horizontal.png" alt="VERITAS LLC" style="height: 50px; width: auto;">
+            <div class="logo-section">
+                <div class="logo">
+                    <img src="veritas-logo-horizontal.png" alt="VERITAS LLC" style="height: 50px; width: auto;">
+                </div>
             </div>
-            <nav>
-                <a href="#problem">The Problem</a>
-                <a href="#solution">Our Solution</a>
-                <a href="#how-it-works">How It Works</a>
-                <a href="#signup">Join Beta</a>
-            </nav>
+            <div class="nav-section">
+                <nav>
+                    <a href="#problem">The Problem</a>
+                    <a href="#solution">Our Solution</a>
+                    <a href="#how-it-works">How It Works</a>
+                    <a href="#signup">Join Beta</a>
+                </nav>
+            </div>
         </div>
     </header>
 
