--- a/VERITAS_Web_Package/VERITAS_Interactive_Demo_Web.html
+++ b/VERITAS_Web_Package/VERITAS_Interactive_Demo_Web.html
@@ -1650,7 +1650,7 @@
     <div class="splash-overlay" id="splashOverlay">
         <div class="splash-content">
             <div class="splash-logo">
-                <img src="veritas-logo.png" alt="VERITAS">
+                <img src="veritas-logo-horizontal.png" alt="VERITAS">
             </div>
             <div class="splash-tagline">Truth in Context</div>
             
