--- a/VERITAS_Web_Package/VERITAS_Interactive_Demo_Web.html
+++ b/VERITAS_Web_Package/VERITAS_Interactive_Demo_Web.html
@@ -1527,10 +1527,14 @@
 
         .splash-tagline {
             font-size: 24px;
-            color: #4a9eff;
+            color: #1a1a2e;
             margin-bottom: 42px;
-            font-weight: 300;
+            font-weight: 500;
             letter-spacing: 2px;
+            background: white;
+            padding: 12px 30px;
+            border-radius: 8px;
+            display: inline-block;
         }
 
         .splash-subtitle {
@@ -1732,7 +1736,7 @@
     <!-- Splash Overlay -->
     <div class="splash-overlay" id="splashOverlay">
         <div class="splash-content">
-            <img src="veritas-logo.png" style="width: 200px; height: auto; margin-bottom: 20px;">
+            <img src="veritas-logo-horizontal.png" style="width: 600px; max-width: 90%; height: auto; margin-bottom: 30px;">
             <div class="splash-tagline">Truth in Context</div>
             
             <div class="splash-subtitle">
