--- a/VERITAS_Web_Package/VERITAS_Interactive_Demo_Web.html
+++ b/VERITAS_Web_Package/VERITAS_Interactive_Demo_Web.html
@@ -1133,21 +1133,21 @@
 
             /* End Demo button with 2-line layout */
             .end-demo-button {
-                width: 60px;
+                width: 60px !important;
                 margin-top: 15px;
-                padding: 6px 5px;
-                font-size: 4.5px;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
+                padding: 6px 5px !important;
+                font-size: 3px !important;
+                display: flex !important;
+                flex-direction: column !important;
+                align-items: center !important;
+                justify-content: center !important;
                 gap: 2px;
                 white-space: nowrap;
-                line-height: 1.2;
+                line-height: 1.2 !important;
             }
 
             .end-demo-button span {
-                display: block;
+                display: block !important;
             }
 
             /* Articles panel slides out from sidebar on mobile */
