--- a/VERITAS_Web_Package/VERITAS_Interactive_Demo_Web.html
+++ b/VERITAS_Web_Package/VERITAS_Interactive_Demo_Web.html
@@ -1167,6 +1167,11 @@
                 transform: translateX(calc(-100% - 65px)) !important;
             }
 
+            /* Mobile-specific hidden-for-reading to fully retract off-screen */
+            .articles-panel.hidden-for-reading {
+                transform: translateX(calc(-100% - 65px)) !important;
+            }
+
             .articles-header {
                 padding: 20px;
             }
