--- a/VERITAS_Web_Package/VERITAS_Interactive_Demo_Web.html
+++ b/VERITAS_Web_Package/VERITAS_Interactive_Demo_Web.html
@@ -2303,7 +2303,7 @@
 
     <!-- ORIGINAL ARTICLE VIEW - EF2 (Step 2 - NEW) -->
     <div class="webpage-container" id="originalArticleEF2" style="padding: 0; z-index: 10;">
-        <iframe src="articles/election-fraud/Heritage_Database___Election_Fraud_Map___The_Heritage_Foundation.htm" style="width: 100%; height: 100%; border: none;"></iframe>
+        <iframe src="articles/election-fraud/Heritage Database _ Election Fraud Map _ The Heritage Foundation.htm" style="width: 100%; height: 100%; border: none;"></iframe>
     </div>
 
     <!-- READING OVERVIEW - EF2 (Step 3) -->
