--- a/documentation.html
+++ b/documentation.html
@@ -609,7 +609,7 @@
         </div>
 
         <!-- DOWN Layer -->
-        <div class="arch-layer arch-layer-down">
+        <div class="arch-layer arch-layer-down" id="bedrock">
           <div class="arch-layer-label">↓ DOWN — What We Stand On</div>
           <div class="arch-layer-title">Epistemological Bedrock <span class="arch-status">✓ Complete v1.0</span></div>
           <div class="arch-layer-subtitle">Eight Assessment Factors • Three Truth Distortion Patterns</div>
@@ -675,7 +675,7 @@
   </section>
 
   <!-- Core Documents Section -->
-  <section style="background: white;">
+  <section style="background: white;" id="core-documents">
     <div class="container">
       <h2 class="section-title">Core Documents</h2>
       <p class="section-subtitle">The essential documents that define what VERITAS is and how it works.</p>
@@ -733,7 +733,7 @@
       <p class="section-subtitle">The walls of our basement—immutable principles that protect VERITAS from corruption.</p>
 
       <div class="docs-grid">
-        <div class="doc-card foundation">
+        <div class="doc-card foundation" id="west-wall">
           <div class="doc-type">West Wall</div>
           <div class="doc-title">Corruption Resistance & Epistemological Integrity</div>
           <div class="doc-description">Detecting when reasoning itself has become corrupted. How Community Validation and AI Core Protection work together as integrated defense.</div>
@@ -743,7 +743,7 @@
           </div>
         </div>
 
-        <div class="doc-card foundation">
+        <div class="doc-card foundation" id="north-wall">
           <div class="doc-type">North Wall</div>
           <div class="doc-title">Community Validation</div>
           <div class="doc-description">Trust flows from known relationships and demonstrated character, not distant authority. Building verification through local knowledge and community accountability.</div>
@@ -753,7 +753,7 @@
           </div>
         </div>
 
-        <div class="doc-card foundation">
+        <div class="doc-card foundation" id="south-wall">
           <div class="doc-type">South Wall</div>
           <div class="doc-title">AI Core Protection</div>
           <div class="doc-description">Technical and governance safeguards protecting VERITAS's core AI systems from compromise. Security through silent watchfulness and transparent methodology.</div>
@@ -763,7 +763,7 @@
           </div>
         </div>
 
-        <div class="doc-card foundation">
+        <div class="doc-card foundation" id="east-wall">
           <div class="doc-type">East Wall</div>
           <div class="doc-title">Epistemological Humility</div>
           <div class="doc-description">Why honest uncertainty is stronger than false confidence. Embracing "both and..." complexity, showing our work, and treating correction as success.</div>
