--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       position: relative;
       width: 100%;
       height: 0;
-      padding-bottom: 56.25%; /* 16:9 aspect ratio */
+      padding-bottom: 29.17%; /* 1920x560 aspect ratio (560/1920) */
       overflow: hidden;
       background: #0a0a12;
     }
