--- a/index.html
+++ b/index.html
@@ -1318,21 +1318,21 @@
   <!-- ARCHITECTURE SECTION - NEW -->
   <section class="architecture">
     <div class="container">
-      <h2 class="section-title">The Complete Architecture</h2>
-      <p class="section-subtitle">VERITAS is built on rigorous foundations. Everything documented. Everything complete.</p>
+      <h2 class="section-title">The 3D VERITAS Architecture</h2>
+      <p class="section-subtitle">Three dimensions of a complete system: what we stand on, how we work, and where we're reaching.</p>
 
       <div class="architecture-diagram">
         <!-- UP Layer -->
         <a href="documentation.html#core-documents" class="arch-layer arch-layer-up">
           <div class="arch-layer-label">↑ UP — Where We're Reaching</div>
-          <div class="arch-layer-title">Star Chart <span class="arch-status">✓ v1.0</span></div>
+          <div class="arch-layer-title">Star Chart <span class="arch-status">✓ Complete v1.0</span></div>
           <div class="arch-layer-subtitle">Consensus • Community • Enlightenment</div>
         </a>
 
         <!-- OUT Layer -->
         <a href="documentation.html#core-documents" class="arch-layer arch-layer-out">
           <div class="arch-layer-label">← OUT → How We Work</div>
-          <div class="arch-layer-title">V.E.R.I.T.A.S. Framework <span class="arch-status">✓ v7.3</span></div>
+          <div class="arch-layer-title">V.E.R.I.T.A.S. Framework <span class="arch-status">✓ Complete v7.3</span></div>
           <div class="arch-layer-subtitle">Validated • Ethical • Reliable • Information • Transmission • Accurate • Synthesis</div>
         </a>
 
@@ -1359,7 +1359,7 @@
         <!-- DOWN Layer -->
         <a href="documentation.html#bedrock" class="arch-layer arch-layer-down">
           <div class="arch-layer-label">↓ DOWN — What We Stand On</div>
-          <div class="arch-layer-title">Epistemological Bedrock <span class="arch-status">✓ v1.0</span></div>
+          <div class="arch-layer-title">Epistemological Bedrock <span class="arch-status">✓ Complete v1.0</span></div>
           <div class="arch-layer-subtitle">Eight Assessment Factors • Three Truth Distortion Patterns</div>
         </a>
       </div>
