--- a/index.html
+++ b/index.html
@@ -495,6 +495,14 @@
       color: white;
     }
 
+    .arch-layer-down .arch-layer-label {
+      color: rgba(255,255,255,0.85);
+    }
+
+    .arch-layer-down .arch-layer-subtitle {
+      color: rgba(255,255,255,0.85);
+    }
+
     .arch-layer-subtitle {
       font-size: 0.95rem;
       opacity: 0.8;
