--- a/assess.html
+++ b/assess.html
@@ -431,7 +431,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1>VERITAS</h1>
+            <img src="/veritas-logo.png" alt="VERITAS" style="max-width: 200px; margin-bottom: 15px;">
             <p class="motto">Truth through Transparency</p>
             <p class="version">Live Assessment • Web Edition</p>
         </header>
