--- a/index.html
+++ b/index.html
@@ -1515,6 +1515,12 @@
           <p>All assessments are public. Validators build reputations based on accuracy and transparency.</p>
         </div>
       </div>
+      
+      <div style="text-align: center; margin-top: 50px;">
+        <a href="VERITAS_Web_Package/VERITAS_Interactive_Demo_Web.html" class="cta-btn cta-primary" style="background: linear-gradient(135deg, #2196F3 0%, #1976D2 100%); color: white; font-size: 20px; padding: 18px 40px;">
+          🚀 Try the Interactive Demo
+        </a>
+      </div>
     </div>
   </section>
   
