--- a/VERITAS_Web_Package/VERITAS_Interactive_Demo_Web.html
+++ b/VERITAS_Web_Package/VERITAS_Interactive_Demo_Web.html
@@ -3135,7 +3135,7 @@
             <div class="topic-label">Gender Identity</div>
         </div>
 
-        <button class="end-demo-button" onclick="window.location.href='index.html'"><span>End</span><span>Demo</span></button>
+        <button class="end-demo-button" onclick="window.location.href='../index.html'"><span>End</span><span>Demo</span></button>
     </div>
 
     <!-- Articles Panels -->
